# SimpleJamService

./: .env.shadow  .gitignore  Makefile  README.md  pyproject.toml
simplejam/: config.py  midifile.py  schemas.py  utils.py
simplejam/commands/: chord_progression_demo.py  diatonic_chords_demo.py
simplejam/keys/: C_major.py  D_major.py
simplejam/midi/: midifile.py  player.py
simplejam/midi/keys/: C_major.py  D_major.py
simplejam/midi/logic/: generators.py
simplejam/utils/: generate_file.py
tests/commands/: test_chord_progression_demo.py  test_diatonic_chords_demo.py
tests/midi/: test_midifile.py  test_player.py
tests/midi/logic/: test_generators.py
