[project]
name = "simplejam"
version = "0.1.0"
description = "A simple MIDI jam service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mido>=1.3.2",
    "pydantic>=2.7.1",
    "environs>=14.3.0",
    "pygame>=2.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "black",
    "flake8",
    "ruff",
    "mypy",
    "coverage"
]

[tool.ruff.lint]
# E741 Ambiguous variable name: `I`
ignore = ["E741"]

[[tool.mypy.overrides]]
module = "mido"
ignore_missing_imports = true

[project.scripts]
simplejam = "simplejam.main:main"
diatonic_demo = "simplejam.commands.diatonic_chords_demo:run"
chord_progression_demo = "simplejam.commands.chord_progression_demo:run"
play_midi_file = "simplejam.midi.player:run"
